[package]
name = "gmaps-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.13"
lambda_runtime = "0.5"
serde_derive = "1.0"
fantoccini = "0.21.2"
headless_chrome = "1.0.15"
regex = "1"
geohash = "0.11"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "index"
path = "src/index.rs"